# 3-tier-user-management-app

./: Dockerfile  Jenkinsfile  README.md  app.py  config.py  docker-compose.yml  namespace.yml  projectdeploy.yml  pyproject.toml  requirements.txt  test_app.py
repositories/: __init__.py  user_repository.py
services/: __init__.py  user_service.py
templates/: add_user.html  data.html  delete.html  get_data.html  index.html  submitteddata.html
